[SHIRO-895] Workaround Guice Java17 compat and run tests on 17.