@@ -120,4 +120,27 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>jdk16</id>
+            <activation>
+                <jdk>[16,17)</jdk>
+            </activation>
+            <properties>
+                <!-- needed by guice until it is compatible with jdk16+. -->
+                <surefire.argLine>--illegal-access=permit</surefire.argLine>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk17</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <!-- needed by guice until it is compatible with jdk17+. -->
+                <surefire.argLine>--add-opens java.base/java.lang=ALL-UNNAMED</surefire.argLine>
+            </properties>
+        </profile>
+    </profiles>
 </project>
